<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Impulse</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_login">Login</string>
    <string name="action_follow">Follow/Unfollow</string>
    <string name="action_external">Play with External Player</string>
    <string name="action_multistream">Setup Multistream</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <string name="nav_action_featured">Featured Streams</string>
    <string name="nav_action_top">Top Streams</string>
    <string name="nav_action_live">Live Followed Streams</string>
    <string name="nav_action_followed">Followed Channels</string>
    <string name="nav_action_browsegames">Browse Games</string>
    <string name="nav_action_search">Search</string>
    <string name="nav_action_settings">Settings</string>

    <string name="display_settings_label">DISPLAY SETTINGS</string>
    <string name="quality_settings_label">QUALITY SETTINGS</string>
    <string name="viewing_settings_label">VIEWING SETTINGS</string>

    <string name="login_prompt_text">Log in to Twitch</string>

    <string name="min_time_string">00:00:00</string>
    <string name="max_time_string">99:99:99</string>

    <string name="version_string">v1.5.2</string>

    <string name="default_livestream_quality">Livestream</string>
    <string name="default_vod_quality">VOD</string>
    <string name="default_clips_quality">Clips</string>

    <!-- Popup Menu Item Text Color Workaround -->
    <string name="menu_item_profile"><font fgcolor='#FFFFFF'>Go to Channel Menu</font></string>
    <string name="menu_item_game"><font fgcolor='#FFFFFF'>Go to Game Section</font></string>

</resources>
