<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_featured"
            android:icon="@drawable/ic_videocam_white_24dp"
            android:title="@string/nav_action_featured"/>
        <item
            android:id="@+id/nav_top"
            android:icon="@drawable/ic_star_white_24dp"
            android:title="@string/nav_action_top"/>
        <item
            android:id="@+id/nav_live"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/nav_action_live"/>
        <item
            android:id="@+id/nav_followed"
            android:icon="@drawable/ic_person_white_24dp"
            android:title="@string/nav_action_followed"/>
        <item
            android:id="@+id/nav_browsegames"
            android:icon="@drawable/ic_games_white_24dp"
            android:title="@string/nav_action_browsegames"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/nav_action_search"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/nav_action_settings"/>
    </group>
</menu>